DOCS : 삭제 오류 수정

--- a/src/main/resources/templates/boards.html
+++ b/src/main/resources/templates/boards.html
@@ -368,7 +368,7 @@
                             $('#confirmationModal').modal('hide');
                         }, 1000);
 
-                        window.location.reload();
+                        window.location.href="/api/boards";
                     },
                     error: function (data) {
 
