[REFECTOR]: 모달 버튼 요청에 맞게 수정

--- a/src/main/resources/templates/backAdmins.html
+++ b/src/main/resources/templates/backAdmins.html
@@ -559,7 +559,7 @@
                     showCancelButton: true,
                     confirmButtonColor: '#d33',
                     cancelButtonColor: '#3085d6',
-                    confirmButtonText: '삭제',
+                    confirmButtonText: '수정',
                     cancelButtonText: '취소',
 
                     reverseButtons: false, // 버튼 순서 거꾸로
@@ -638,7 +638,7 @@
                             showCancelButton: true,
                             confirmButtonColor: '#d33',
                             cancelButtonColor: '#3085d6',
-                            confirmButtonText: '삭제',
+                            confirmButtonText: '숨김',
                             cancelButtonText: '취소',
 
                             reverseButtons: false, // 버튼 순서 거꾸로
@@ -697,7 +697,7 @@
                     showCancelButton: true,
                     confirmButtonColor: '#d33',
                     cancelButtonColor: '#3085d6',
-                    confirmButtonText: '삭제',
+                    confirmButtonText: '숨김',
                     cancelButtonText: '취소',
 
                     reverseButtons: false, // 버튼 순서 거꾸로
@@ -757,7 +757,7 @@
                     showCancelButton: true,
                     confirmButtonColor: '#d33',
                     cancelButtonColor: '#3085d6',
-                    confirmButtonText: '삭제',
+                    confirmButtonText: '탈퇴',
                     cancelButtonText: '취소',
 
                     reverseButtons: false, // 버튼 순서 거꾸로
@@ -789,7 +789,7 @@
                 Swal.fire({
                     icon: 'warning',
                     title: '선택 오류',
-                    text: '삭제할 유저를 선택해주세요.',
+                    text: '탈퇴할 유저를 선택해주세요.',
                 });
             } else {
                 Swal.fire({
