--- a/src/main/resources/templates/backUsers.html
+++ b/src/main/resources/templates/backUsers.html
@@ -977,7 +977,7 @@
                 showCancelButton: true,
                 confirmButtonColor: '#d33',
                 cancelButtonColor: '#3085d6',
-                confirmButtonText: '삭제',
+                confirmButtonText: '탈퇴',
                 cancelButtonText: '취소',
 
                 reverseButtons: false, // 버튼 순서 거꾸로
