--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -194,8 +194,28 @@
     }
 
     function gotoPost(postid) {
-        console.log(postid);
-        window.location.href = '/api/posts/' + postid; // 클릭된 리스트 아이템에 맞는 링크로 이동
+        const token = Cookies.get('Authorization');
+        if(token){ // 토큰 있을 경우
+            window.location.href = '/api/posts/' + postid; // 클릭된 리스트 아이템에 맞는 링크로 이동
+        } else {
+            Swal.fire({
+                title: '로그인한 사용자만 볼 수 있습니다.',
+                text: '로그인/회원가입 하러가기',
+                icon: 'warning',
+
+                showCancelButton: true,
+                confirmButtonColor: '#d33',
+                cancelButtonColor: '#3085d6',
+                confirmButtonText: '확인',
+                cancelButtonText: '취소',
+
+                reverseButtons: false, // 버튼 순서 거꾸로
+            }).then(result => {
+                if (result.isConfirmed) { // 만약 모달창에서 confirm 버튼을 눌렀다면
+                    window.location.href = '/api/auth/login-page';
+                }
+            });
+        }
     }
 
     $(document).ready(function () {
