--- a/src/main/resources/static/css/privateChat.css
+++ b/src/main/resources/static/css/privateChat.css
@@ -335,7 +335,7 @@ button.goOut {
     text-decoration: none;
     font-weight: 600;
     text-transform: uppercase;
-    padding: 0.5em 1.5em;
+    padding: 0.2em 1.5em !important;
     background:#fff0f0;
     border: 2px solid #b18597;
     border-radius: 0.75em;
@@ -354,7 +354,7 @@ button.goOut::before {
     bottom: 0;
     background: #f9c4d2;
     border-radius: inherit;
-    box-shadow: 0 0 0 2px  #b18597, 0 0.625em 0 0 #ffe3e2;
+    box-shadow: 0 0 0 2px  #b18597, 0 0.4em 0 0 #ffe3e2;
     transform: translate3d(0, 0.5em, -1em);
     transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
 }
