--- a/src/main/resources/templates/privateChat.html
+++ b/src/main/resources/templates/privateChat.html
@@ -10,6 +10,14 @@
 
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" />
 
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
+    <script crossorigin="anonymous" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js">
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
+
     <link rel="stylesheet" type="text/css"  href="/css/privateChat.css">
 
     <style>
@@ -26,8 +34,29 @@
     <div class="chat-container">
         <div class="chat-header">
             <h2>Chat</h2>
-
-            <button class="goOut" id = "goOutBtn">뒤로가기</button>
+            <div>
+                <button class="goOut" th:if="${group}" data-bs-toggle="modal" data-bs-target="#leaveChatBtn" >나가기</button>
+                <button class="goOut" id = "goOutBtn">뒤로가기</button>
+            </div>
+            <!--삭제 모달창 -->
+            <div class="modal fade" id="leaveChatBtn" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel" text="채팅방 퇴장"></h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            나가시겠습니까? 되돌릴 수 없습니다
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger btn-delete" id = "leaveBtn" >퇴장</button>
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">취소</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--삭제 모달창 종료-->
         </div>
         <ul id="messageArea">
 
@@ -61,6 +90,26 @@
     const goOutBtn = document.getElementById('goOutBtn');
     goOutBtn.addEventListener('click', () => {
         window.location.href = '/api/chatRooms';
+    })
+
+    const leaveChatBtn = document.getElementById('leaveBtn');
+    leaveChatBtn.addEventListener('click', () => {
+        // 요청을 보내고 나서 이동
+
+        $.ajax({
+            type: "PUT",
+            url: `/api/chatRooms/${chatRoomId}`,
+            success: function () {
+                console.log("요청 성공");
+                window.location.href = "/api/chatRooms";
+            },
+            error: function () {
+                console.log("요청 실패");
+            }
+        })
+
+
+        // window.location.href = "/api/chatRooms";
     })
 
     $(document).ready(function() {
