#62 FEAT : 회원가입 시 이메일 인증절차 구현 1. email 패키지 파일 구조 변경 2. Redis 인메모리를 통한 기능 구현

--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -40,7 +40,7 @@
             <input type="text" placeholder="Email ID" name="username" id="username" class="input" th:value="${email}"/>
 
             <!--인증 여부 값 hidden-->
-            <input id="email-check" type="hidden" name="emailCheck" checked="off" style="display:none">
+            <input id="email-check" type="hidden" name="emailCheck" value="false" style="display:none">
 
             <a href="#" id="sendEmail" style="
             margin-left: -53%;
