--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -49,7 +49,7 @@
             margin-top:5px;">
                 <div class="modal-content">
                     <!-- 모달 내용 -->
-                    <input type="text" id="email-password" name="email-password" placeholder="인증번호 입력">
+                    <input type="text" id="email-password" name="email-password" placeholder="5분 이내 입력 부탁드립니다.">
                     <button id="check-email-btn" onclick="checkEmail()">인증하기</button>
                 </div>
             </div>
